# AbstractSyntaxTree

./: .gitignore  BynaryHeap.h  CMakeLists.txt  LICENSE  RBTree.h  README.md  SmartPtrs.h
analysis/: subexpression_finder.cpp
app/: astwidget.cpp  astwidget.h  main.cpp
ast/: ast.h
lab2/: plan.txt
lab2/analysis/: msp_checker.cpp  msp_checker.h  subexpression_finder.h
lab2/ast/: ast.cpp
lab2/parser/: parser.cpp  pda.h  tokenizer.cpp
parser/: parser.h  parser_exceptions.h  pda.cpp  tokenizer.h
tests/: run_tests.cpp
util/: subtree_utils.cpp  subtree_utils.h
